# lubuntu-lark-neuroshell

./: CMakeLists.txt  README.md  SDLC.md  aiwidget.cpp  aiwidget.h  build_package.sh  control  dataset.jsonl  lxqt-config-memfusion.desktop  lxqt-config-neuroshell.desktop  lxqt-memfusion-daemon.desktop  lxqt-neuroshell-daemon.desktop  memfusion-watchdog.py  memfusionconfig.cpp  memfusionconfig.h  modelmanager.cpp  modelmanager.h  neuroshell_daemon.py  postinst  postrm  preinst
